# py-mcp-collection

./: .gitignore  README.md  bump_versions.py  format_projects.sh  new-mcp-server.py  py-mcp-collection.code-workspace  pyproject.toml
aider-wrapper-mcp/: README.md  pyproject.toml
aider-wrapper-mcp/.roo/: mcp.json
aider-wrapper-mcp/src/aider_wrapper_mcp/: __init__.py  main.py
aider-wrapper-mcp/tests/: test_main.py
doc-store-vector-search-mcp/: README.md  pyproject.toml
doc-store-vector-search-mcp/.roo/: mcp.json
doc-store-vector-search-mcp/src/doc_store_vector_search_mcp/: __about__.py  __init__.py  main.py
doc-store-vector-search-mcp/src/doc_store_vector_search_mcp/etl/: load.py  split.py  store.py
doc-store-vector-search-mcp/src/doc_store_vector_search_mcp/logging/: util.py
doc-store-vector-search-mcp/src/doc_store_vector_search_mcp/servers/: load.py  search.py
doc-store-vector-search-mcp/src/doc_store_vector_search_mcp/summarization/: gibberish.py  text.py
doc-store-vector-search-mcp/tests/: test_load.py  test_main.py  test_servers.py  test_store.py
doc-store-vector-search-mcp/tests/__snapshots__/: test_split.ambr
doc-store-vector-search-mcp/tests/etl/: samples.py  test_load.py  test_store.py
doc-store-vector-search-mcp/tests/etl/split/: test_code.py  test_markdown.py
doc-store-vector-search-mcp/tests/servers/: test_load.py
doc-store-vector-search-mcp/tests/servers/__snapshots__/: test_load.ambr
doc-store-vector-search-mcp/tests/split/: test_code.py  test_json.py  test_markdown.py
doc-store-vector-search-mcp/tests/split/__snapshots__/: test_code.ambr  test_json.ambr  test_markdown.ambr
elasticsearch-esql-tools-mcp/: esql_tools.yaml  pyproject.toml
elasticsearch-esql-tools-mcp/src/elasticsearch_esql_tools_mcp/: main.py
elasticsearch-esql-tools-mcp/src/elasticsearch_esql_tools_mcp/clients/: elasticsearch.py
elasticsearch-esql-tools-mcp/src/elasticsearch_esql_tools_mcp/tool_builder/: compile.py
elasticsearch-esql-tools-mcp/tests/: conftest.py
elasticsearch-esql-tools-mcp/tests/tool_builder/: test_compile.py
es-mcp/: README.md  pyproject.toml
es-mcp/.roo/: mcp.json
es-mcp/src/es_mcp/: main.py
es-mcp/tests/: test_main.py
filesystem-operations-mcp/: README.md  __about__.py  pyproject.toml
filesystem-operations-mcp/src/filesystem_operations_mcp/: main.py
filesystem-operations-mcp/src/filesystem_operations_mcp/filesystem/: errors.py  file_system.py  models.py  nodes.py  server.py  skip.py  view.py
filesystem-operations-mcp/tests/: test_file_operations.py  test_file_system.py  test_filesystem.py  test_nodes.py  test_server.py  test_view.py
filesystem-operations-mcp/tests/utils/: test_ripgrep.py
github-research-mcp/: README.md  pyproject.toml
github-research-mcp/.gemini/: settings.json
github-research-mcp/.roo/: mcp.json
github-research-mcp/src/github_research_mcp/: main.py  public.py
github-research-mcp/src/github_research_mcp/sampling/: decorator.py  extract.py  google_genai.py  prompts.py
github-research-mcp/src/github_research_mcp/servers/: base.py  issues.py  issues_or_pull_requests.py  public.py  pull_requests.py  repository.py  summary 1.md  summary 2.md
github-research-mcp/tests/: conftest.py
github-research-mcp/tests/query/: test_base.py
github-research-mcp/tests/servers/: test_issues.py  test_issues_or_pull_requests.py  test_public.py  test_pull_requests.py  test_repository.py
is-nonsense-mcp/: README.md  pyproject.toml
is-nonsense-mcp/.roo/: mcp.json
is-nonsense-mcp/src/is_nonsense_mcp/: main.py
is-nonsense-mcp/tests/: test_main.py
knowledge-base-mcp/: .gitignore  README.md  pyproject.toml
knowledge-base-mcp/src/knowledge_base_mcp/: .gitignore  main.py
knowledge-base-mcp/src/knowledge_base_mcp/archived/: documentation.py.disabled  ingest.py.disabled  manager.py.disabled  search.py.disabled
knowledge-base-mcp/src/knowledge_base_mcp/clients/: knowledge_base.py
knowledge-base-mcp/src/knowledge_base_mcp/docling/: html_backend.py
knowledge-base-mcp/src/knowledge_base_mcp/pipelines/: docling.py  embeddings.py  retrieval.py  vector_store.py
knowledge-base-mcp/src/knowledge_base_mcp/servers/: base.py  documentation.py  github.py  ingest.py  manage.py
knowledge-base-mcp/src/knowledge_base_mcp/utils/: iterators.py  logging.py  models.py  patches.py  timer.py  window.py  workers.py
knowledge-base-mcp/src/knowledge_base_mcp/vector_stores/: duckdb.py  elasticsearch.py
knowledge-base-mcp/tests/: conftest.py  test_async_web_reader.py  test_main.py  test_markdown_blockquotes.py  test_markdown_lists.py  test_markdown_tables.py  test_semantic_merger.py
knowledge-base-mcp/tests/llama_index/hierarchical_node_parsers/: test_docling_hierarchical_node_parser.py  test_hierarchical_node_parser.py  test_leaf_semantic_merger_node_parser.py
knowledge-base-mcp/tests/servers/: test_docs.py  test_github.py
knowledge-base-mcp/tests/utils/: test_window.py
mcp-oops/: README.md  mcp-config.yml  pyproject.toml
mcp-oops/.roo/: mcp.json
mcp-oops/src/mcp_oops/: hooks.py  main.py
mcp-oops/src/mcp_oops/intercepting/: proxy_tool.py
mcp-oops/tests/: test_main.py
mcp-utils/: README.md  pyproject.toml
mcp-utils/.roo/: mcp.json
mcp-utils/src/mcp_utils/: __about__.py
mcp-utils/tests/: conftest.py  test_main.py
mcp-utils/tests/content/: test_truncate.py  test_view.py
mcp-utils/tests/responses/: test_limit.py  test_redirect.py
random-mcp/: README.md  pyproject.toml
random-mcp/.roo/: mcp.json
random-mcp/src/random_mcp/: main.py  query.py
random-mcp/tests/: test_main.py
strawgate-es-mcp/: pyproject.toml
strawgate-es-mcp/src/strawgate_es_mcp/: main.py
template/: README.md  pyproject.toml
template/.roo/: mcp.json
template/src/template/: main.py
template/tests/: test_main.py
web-search-summary-mcp/: README.md  pyproject.toml
web-search-summary-mcp/.roo/: mcp.json
web-search-summary-mcp/src/web_search_summary_mcp/: main.py
web-search-summary-mcp/tests/clients/: test_brave.py
web-search-summary-mcp/tests/servers/: test_integration.py  test_summarize.py
(+140 files in other folders)
