[project]
name = "aider_wrapper_mcp"
version = "0.1.0"
description = "Aider Wrapper Mcp project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncclick>=8.1.8",
    "fastmcp>=2.3.5",
    "mcp>=1.9.0",
    "aider-chat (>=0.83.0,<0.84.0)",
]

[tool.poetry]
packages = [
    { include = "aider_wrapper_mcp", from = "src" }
]
[tool.hatch.metadata]
allow-direct-references=true

[tool.poetry.scripts]
aider_wrapper_mcp = "aider_wrapper_mcp.main:run_mcp"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
  "ruff"
]
lint = [
  "ruff"
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.ruff]
extend="../pyproject.toml"