[project]
name = "doc_store_vector_search_mcp"
version = "0.2.1"
description = "An MCP Server for managing and searching document stores using vector embeddings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncclick>=8.1.8",
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.2.2",
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.3.5",
    "markdownify>=1.1.0",
    "mcp>=1.9.0",
    "numpy>=2.2.6",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.1",
    "langchain-core",
    "langchain-community",
    "langchain",
    "sqlite-vss", # Or other chosen vector store
    "unstructured[md]", # For various document types
    "jq", # For JSON processing
    "tiktoken", # For token counting/splitting
    "langchain-text-splitters>=0.3.8",
    "pytest-freezer>=0.4.9",
    "html-to-markdown>=1.3.3",
    "sumy>=0.11.0",
    "textstat>=0.7.7",
    "dbowring-sentencepiece>=0.2.1.post0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "storable>=1.2.4",
    "cached-path>=1.7.3",
    "pandas>=2.3.0",
    "langchain-experimental>=0.3.4",
    "flashrank>=0.2.10",
]

[tool.poetry]
packages = [
    { include = "doc_store_vector_search_mcp", from = "src" }
]
[tool.hatch.metadata]
allow-direct-references=true

[project.scripts]
doc_store_vector_search_mcp = "doc_store_vector_search_mcp.main:run_mcp"

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio>=0.26.0",
  "pytest-mock",
  "ruff",
  "syrupy>=4.9.1",
]
lint = [
  "ruff"
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-vvv"

[tool.ruff]
extend="../pyproject.toml"
