[project]
name = "es_mcp"
version = "0.1.0"
description = "Es Mcp project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.2",
    "asyncclick>=8.1.8",
    "elasticsearch>=8.18.0,<9.0.0",
    "fastmcp>=2.3.5",
    "mcp>=1.9.0",
    "python-dotenv>=1.1.0",
]

[tool.poetry]
packages = [
    { include = "es_mcp", from = "src" }
]
[tool.hatch.metadata]
allow-direct-references=true

[project.scripts]
es_mcp = "es_mcp.main:run_mcp"


[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "ruff"
]
lint = [
  "ruff"
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.ruff]
extend="../pyproject.toml"
