[project]
name = "knowledge_base_mcp"
version = "0.2.2"
description = "Knowledge Base Mcp project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.12.13",
    "asyncclick>=8.1.8",
    "crawlee[beautifulsoup]>=0.6.10",
    "docling-core[chunking]>=2.37.0",
    "duckdb>=1.3.0",
    "fastmcp>=2.3.5",
    "llama-index-embeddings-fastembed>=0.3.2",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-node-parser-docling>=0.3.2",
    "llama-index-readers-docling>=0.3.3",
    "llama-index-readers-web>=0.4.2",
    "llama-index-vector-stores-duckdb>=0.4.0",
    "llama-index-vector-stores-elasticsearch>=0.4.3",
    "magika>=0.6.2",
    "mcp>=1.9.0",
    "mistune>=3.1.3",
    "pip>=25.1.1",
    "pyarrow>=20.0.0",
    "pyarrow-stubs>=20.0.0.20250618",
    "pytest-aiohttp>=1.1.0",
    "pytest-benchmark>=5.1.0",
    "pytest-freezer>=0.4.9",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.8.0",
]

[tool.poetry]
packages = [
    { include = "knowledge_base_mcp", from = "src" }
]
[tool.hatch.metadata]
allow-direct-references=true

[project.scripts]
knowledge-base-mcp = "knowledge_base_mcp.main:run_mcp"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
  "ruff",
]
lint = [
  "ruff"
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.ruff]
extend="../pyproject.toml"


[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*.py" = [
    "S101", # Ignore asserts
    "DTZ005", # Ignore datetime.UTC
    "PLR2004", # Ignore magic values
    "PLR6301", # Ignore could be class or static method
    "FURB118", # Ignore functions for extracting values from tuple
    "S101", # Ignore asserts in tests
    "ARG002", # Ignore unused arguments
    "S607", # Starting a subprocess with a partial path
    "S603", # Ignore untrusted input in subprocesses
    "ARG001", # Ignore unused arguments
]
"**/src/knowledge_base_mcp/vendored/**/*.py" = [
    "ALL"
]
