[project]
name = "mcp-oops"
version = "0.1.0"
description = "MCP-Oops Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncclick>=8.1.8",
    "fastmcp>=2.3.5",
    "mcp>=1.9.0",
    "pyyaml>=6.0.2",
]

[tool.poetry]
packages = [
    { include = "mcp_oops", from = "src" }
]
[tool.hatch.metadata]
allow-direct-references=true

[tool.poetry.scripts]
mcp-oops = "mcp_oops.main:run_mcp"


[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "ruff"
]
lint = [
  "ruff"
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.ruff]
extend="../pyproject.toml"
