[project]
name = "mcp_utils"
dynamic = ["version"]
description = "Mcp Utils project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncclick>=8.1.8",
    "mcp>=1.9.0",
]

[tool.poetry]
packages = [
    { include = "mcp_utils", from = "src" }
]
[tool.hatch.metadata]
allow-direct-references=true

[tool.poetry.scripts]
mcp_utils = "mcp_utils.main:run_mcp"


[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "ruff"
]
lint = [
  "ruff"
]

[tool.hatch.version]
path = "mcp_utils/__about__.py"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.ruff]
extend="../pyproject.toml"