[project]
name = "mcp_utils"
version = "0.1.3"
description = "Mcp Utils project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncclick>=8.1.8",
    "fastmcp>=2.5.2",
    "mcp>=1.9.0",
    "pytest-asyncio>=1.0.0",
]

[tool.poetry]
packages = [
    { include = "mcp_utils", from = "src" }
]
[tool.hatch.metadata]
allow-direct-references=true

[tool.poetry.scripts]
mcp_utils = "mcp_utils.main:run_mcp"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "ruff"
]
lint = [
  "ruff"
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.ruff]
extend="../pyproject.toml"
